# micro-service

./: .gitignore  .pre-commit-config.yaml  AI_ENHANCEMENT_README.md  DEPLOYMENT.md  DOCKER_FIX_SUMMARY.md  Dockerfile  Dockerfile.fullstack  EMAIL_DEBUG_SOLUTION.md  README.md  RENDER_DEPLOYMENT_TROUBLESHOOTING.md  docker-compose.yml  fix_whitespace.py  render.yaml  run_dev.sh  run_dev_with_logs.sh  test_parsing_fix.py
.github/workflows/: ci-no-cache.yml  ci.yml  deploy.yml
backend/: .env.example  BOOKING_FLOW_FIX.md  COMPLETE_EMAIL_FIX.md  Dockerfile  EMAIL_DELIVERY_FIXES.md  ai_service.py  chat_service.py  conftest.py  database.py  debug_email.py  demo_ai_responses.py  email_delivery_solution.md  email_delivery_test.py  email_monitor.py  email_service.py  email_troubleshooting_guide.py  inventory_service.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  session_db_service.py  test_ai_integration.py  test_ai_service_fix.py  test_booking_flow.py  test_chat_service.py  test_complete_booking.py  test_comprehensive.py  test_email.py  test_email_dev.py  test_email_formatting_improvements.py  test_formatting_standalone.py  test_health_endpoint.py  test_inventory_service.py  test_main.py  test_multi_field_parsing.py  test_multiple_booking.py  test_multiple_booking_email_flow.py  test_openai_connection.py  (+6 more)
docs/: API_DOCUMENTATION.md  DEVELOPMENT_GUIDE.md  DOCKER_TROUBLESHOOTING.md
frontend/: .env.example  .env.production  .eslintrc.cjs  .prettierignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  ChatWidget.css  ChatWidget.jsx  WakeBackend.jsx
scripts/: setup-dev-environment.sh  test-docker-builds.sh
